--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1063,8 +1063,8 @@ section:not(#about) h2.framed-subtitle {
 }
 
 .featured-card:hover {
-  transform: translateY(-4px);
-  box-shadow: 0 0 24px rgba(0, 255, 255, 0.5);
+  transform: translateY(-6px);
+    box-shadow: 0 0 25px #39ff14, 0 0 60px rgba(0, 247, 255, 0.6);
 }
 
 .featured-card img {
@@ -1072,6 +1072,13 @@ section:not(#about) h2.framed-subtitle {
   height: 360px;
   object-fit: cover;
   border-bottom: 1px solid #00ffff;
+}
+
+/* hover effect */
+.featured-card:hover {
+    transform: translateY(-6px);
+    border-color: #00ff9c !important;
+    box-shadow: 0 0 40px #00ff9c, 0 0 60px rgba(0, 247, 255, 0.6) !important;
 }
 
 .featured-content {
@@ -1100,14 +1107,16 @@ section:not(#about) h2.framed-subtitle {
 }
 
 .featured-link {
+font-family: 'VT323', monospace !important;
+ font-size: 1rem;
   color: #00ffff;
   font-weight: 600;
-  text-decoration: none;
+  transition: color 0.3s ease, text-shadow 0.3s ease;
 }
 
 .featured-link:hover {
-  color: #ffffff;
-  text-shadow: 0 0 10px #00ffff;
+  color: #39ff14;
+text-shadow: 0 0 12px #39ff14, 0 0 25px rgba(0, 255, 180, 0.7);
 }
 
 /* === SELF-PUBLISHED ARTICLES CAROUSEL === */
